# alsdiff

./: .git-blame-ignore-revs  .gitignore  .ocp-indent  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  THE-LICENSE.txt  alsdiff.opam  dune-project
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  custom_build.yml  release.yml
docs/: config.schema.json
lib/: dune
lib/base/: diff.ml  dune  equality.ml  file.ml  upath.ml  xml.ml
lib/live/: automation.ml  clip.ml  device.ml  diff.ml  dune  liveset.ml  main_track.ml  mixer.ml  plugin.ml  track.ml
lib/output/: config.ml  dune  layout_engine.ml  output.ml  text_output.ml  text_renderer.ml  view_model.ml
plugins/: README.md
plugins/ableton-save/: README.md
plugins/ableton-save/.claude-plugin/: plugin.json
plugins/ableton-save/commands/: save-live-set.md
plugins/ableton-save/scripts/: ableton_save.py  save_ableton_project.scpt
plugins/ableton-save/skills/ableton-save/: SKILL.md
plugins/ableton-test-generator/: README.md
plugins/ableton-test-generator/.claude-plugin/: plugin.json
plugins/ableton-test-generator/agents/: ableton-test-generator.md
plugins/architect-analyst/: README.md
plugins/architect-analyst/.claude-plugin/: plugin.json
plugins/architect-analyst/agents/: architect-analyst.md
plugins/ocaml-code-indent/: README.md
plugins/ocaml-code-indent/.claude-plugin/: plugin.json
plugins/ocaml-code-indent/hooks/: format-ocaml.sh  hooks.json
plugins/ocaml-lsp/: README.md
plugins/ocaml-lsp/.claude-plugin/: .lsp.json  plugin.json
plugins/security-data-leak-scanner/: README.md
plugins/security-data-leak-scanner/.claude-plugin/: plugin.json
plugins/security-data-leak-scanner/agents/: security-data-leak-scanner.md
plugins/xml-element-extractor/: README.md  SKILL.md
plugins/xml-element-extractor/.claude-plugin/: plugin.json
plugins/xml-element-extractor/references/: python_xml.md
plugins/xml-element-extractor/skills/xml-element-extractor/: reference.md
plugins/xml-element-extractor/skills/xml-element-extractor/scripts/: extract_xml_element.py
plugins/zen-code-reviewer/: README.md
plugins/zen-code-reviewer/.claude-plugin/: plugin.json
plugins/zen-code-reviewer/agents/: zen-code-reviewer.md
scripts/: setup-git.sh
test/: audio_clip.xml  audio_clip_old.xml  audio_track.xml  automation.xml  automation_old.xml  compressor_device.xml  dune  eq8_device.xml  group_device.xml  m4l_device.xml  main_track.xml  midi_clip.xml  midi_clip_old.xml  midi_track.xml  mixer.xml  mixer_old.xml  plugin_device.xml  regex_match.xml  t4.xml  test_audio_clip.ml  test_audio_track.ml  test_automation.ml  test_clip_patch.ml  test_complex.ml  test_detail_config_json.ml  test_device.ml  test_diff_audio_clip.ml  test_diff_automation.ml  test_diff_device.ml  test_diff_list.ml  test_diff_midi_clip.ml  test_diff_mixer.ml  test_diff_track.ml  test_group_device.ml  test_layout_engine.ml  test_liveset.ml  test_m4l_device.ml  test_main_track.ml  test_midi_clip.ml  test_midi_track.ml  (+12 more)
