(library
 (name alsdiff_base)
 (modules
   file
   xml
   upath
   equality
   diff)
 (libraries
   re
   angstrom
   camlzip
   xmlm
   fmt))

;; Auto indent files with `dune build @fmt`
(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules -o %{target}))))
