(library
 (name alsdiff_live)
 (public_name alsdiff.live)
 (modules
   automation
   clip
   device
   track
   liveset)
 (libraries
   alsdiff_base
   ppx_deriving
   ppx_deriving_yojson
   yojson)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson)))

;; Auto indent files with `dune build @fmt`
(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules -o %{target}))))
