(library
 (name alsdiff_output)
 (modules
   output
   view_model
   text_renderer)
 (libraries
   alsdiff_base
   alsdiff_live
   ppx_deriving_yojson
   ppx_deriving_jsonschema.runtime
   jsonschema
   fmt
   ptime
   yojson)
 (preprocess (pps ppx_deriving_yojson ppx_deriving_jsonschema)))

;; Auto indent files with `dune build @fmt`
(subdir
 run
 (dynamic_include ../rules/dune.ocp-indent))

(subdir
 rules
 (rule
  (deps
   (glob_files ../*.{ml,mli}))
  (target dune.ocp-indent)
  (action
   (run ocp-indent-gen-rules -o %{target}))))
